Use heavier color for footer, align dropdown icons to right of nav labels, tighten dropdown nav line height, style first content section for greater prominence. (Fix #1 and fix #2)

--- a/_sass/_footer.scss
+++ b/_sass/_footer.scss
@@ -1,7 +1,6 @@
 @import 'vars'; //social media colors
 
 footer {
-    color: #333;
 
     .clir-social {
 
@@ -37,6 +36,8 @@ footer {
     }
 
     .footer-widget-area {
+        background-color: #2c818c !important;
+        color: #fff;
         .widget-title {
             font-weight: bold;
             color: #333;
@@ -44,6 +45,9 @@ footer {
     }
 
     .footer-info-area {
+        background-color: #2c818c !important;
+        color: #fff;
+
         .site-info {
             border-top: 1px solid rgba(151, 160, 175, 0.2);
             margin-top: 30px;
