--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -8,6 +8,10 @@
 @import 'clir'; // clir specific customizations
 @import 'dlf'; // dlf specific customizations
 
+body {
+    font-family: 'Open Sans Pro', 'Open Sans', sans-serif;
+}
+
 .scrollToTop {
   background: url("img/bottom-top-arrow.png") no-repeat scroll 13px 12px #ffffff;
   border: 3px solid #f0f1f3;
@@ -85,4 +89,11 @@
 .alchem-home-section-0 .magee-section {
     height: $slider_height !important;
     min-height: $slider_height !important;
+}
+
+.home #alchem-home-sections .alchem-home-section-1 {
+    font-size: 21px;
+    line-height: 30px;
+    padding-top: 60px;
+    padding-bottom: 60px;
 }
